ajout des première ligne de code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Un super titre !</h1>
+	<header>
+		<img src="images/logo/Reservia@3x.png" />
+	</header>
+	
+	<section>
+		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
+		<p class="p-under-title">En plein centre ville ou en plein nature</p>
+	</section>
+	
+	<footer>
+	</footer>
+
 </body>
 </html>
