ajout de la liste de navigation avec l'aide de mon mentor

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <body>
 	<header>
 		<img src="images/logo/Reservia@3x.png" />
+		<nav>
+			<ul class="menu_list">
+				<li><a> Hébergements </a></li>
+				<li><a> Activités </a></li>
+				<li><a class="link_login"> S'inscire </a></li>
+			</ul>
+		</nav>
 	</header>
 	
-	<section>
+	<section class="contenaier_title">
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
 	</section>
