--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 	
-	<section class="contenaier_title">
+	<section class="container_title">
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
 	</section>
