--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<section class="container_title">
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
+		
+		<input type="text" id="name" name="name" required minlength="0" maxlength="99" size="10">
+
 	</section>
 	
 	<footer>
@@ -26,3 +29,13 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
