--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo/Reservia@3x.png" />
+		<img class="logo_reservia" src="images/logo/Reservia@3x.png"/>
 		<nav>
 			<ul class="menu_list">
 				<li><a> Hébergements </a></li>
@@ -19,13 +19,16 @@
 	<section class="container_title">
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
-		
-		<input type="text" id="name" name="name" required minlength="0" maxlength="99" size="10">
-
+			<form method="post">
+				<p class="search_city">
+					<img src="images/icons/location-pin.png"/>
+					<input type="text" name="location" id="location" maxlength="40" placeholder="Marseille, France"/>
+					<label for="location">Rechercher</label>
+				</p>
+			</form>
 	</section>
 	
-	<footer>
-	</footer>
+	
 
 </body>
 </html>
