ajout de la partie 'filtre' du site

--- a/index.html
+++ b/index.html
@@ -16,20 +16,27 @@
 		</nav>
 	</header>
 	
-	<section class="container_title">
+	<section class="first_section">
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
-			<form method="post">
-				<p class="search_city">
-					<img src="images/icons/location-pin.png"/>
-					<input type="text" name="location" id="location" maxlength="40" placeholder="Marseille, France"/>
-					<label for="location">Rechercher</label>
-				</p>
-			</form>
+		<form method="post">
+			<p class="search_city">
+				<img src="images/icons/location-pin.png"/>
+				<input type="text" name="location" id="location" maxlength="40" placeholder="    Marseille, France"/>
+				<label for="location">Rechercher</label>
+			</p>
+		</form>
+		
+		<section class="second_section">
+			<p>Filtres</p>
+			<section class="filters">
+			<p class="deco1"><img src="images/icons/money.png"/>Économique</p>
+			<p class="deco2"><img src="images/icons/guy.png"/>Familial</p>
+			<p class="deco3"><img src="images/icons/heart.png"/>Romantique</p>
+			<p class="deco4"><img src="images/icons/pets.png"/>Animaux autorisés</p>
+			</section>
+		</section>
 	</section>
-	
-	
-
 </body>
 </html>
 
