finalisation du para 'filtre' + ajout du p info + commencement des articles

--- a/index.html
+++ b/index.html
@@ -5,42 +5,87 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
 	<header>
+	
 		<img class="logo_reservia" src="images/logo/Reservia@3x.png"/>
+		
 		<nav>
+		
 			<ul class="menu_list">
 				<li><a> Hébergements </a></li>
 				<li><a> Activités </a></li>
 				<li><a class="link_login"> S'inscire </a></li>
 			</ul>
+			
 		</nav>
+		
 	</header>
 	
 	<section class="first_section">
+	
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
 		<p class="p-under-title">En plein centre ville ou en plein nature</p>
+		
 		<form method="post">
+		
 			<p class="search_city">
 				<img src="images/icons/location-pin.png"/>
 				<input type="text" name="location" id="location" maxlength="40" placeholder="    Marseille, France"/>
 				<label for="location">Rechercher</label>
 			</p>
+			
 		</form>
 		
 		<section class="second_section">
+		
 			<p>Filtres</p>
-			<section class="filters">
-			<p class="deco1"><img src="images/icons/money.png"/>Économique</p>
-			<p class="deco2"><img src="images/icons/guy.png"/>Familial</p>
-			<p class="deco3"><img src="images/icons/heart.png"/>Romantique</p>
-			<p class="deco4"><img src="images/icons/pets.png"/>Animaux autorisés</p>
-			</section>
+			
+				<section class="filters">
+				
+					<p><img class="icon1" src="images/icons/money.png"/>Économique</p>
+					<p><img class="icon2" src="images/icons/guy.png"/>Familial</p>
+					<p><img class="icon3" src="images/icons/heart.png"/>Romantique</p>
+					<p><img class="icon4" src="images/icons/pets.png"/>Animaux autorisés</p>
+				
+				</section>
+			
 		</section>
+		
+		<section class="info">
+			
+			<img src="images/icons/info.png"/>
+			<p>Plus de 500 logements sont disponibles dans cette ville</p>
+			
+		</section>
+		
 	</section>
+	
+	<article class="marseille_accommodation">
+		
+			<h1>Hébergements à Marseille</h1>
+			
+			<div id="accommodation_images">
+			
+				<img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+				<img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+				<img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+				<img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+				<img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+				<img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+			
+			</div>
+			
+	</article>
+	
+	<!-- <footer> -->
+	
+		<!-- <p>À propos</p> -->
+	
+	<!-- </footer> -->
+	
 </body>
 </html>
-
-
 
 
 
