quelques test pour mieux comprendre quelques trucs

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			
 			<div id="accommodation_images">
 			
-				<img class="accommodation_image1" src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+				<img class="accommodation_image1" src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" style="margin-bottom: 30px;">
 				<img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
 				<img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
 				<img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
