réadaptation des images lien font awesome

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			
 				<section class="filters">
 				
-					<p class="filter_1"><i class="fas fa-money-bill-wave"></i>Économique</p>
-					<p class="filter_2"><i class="fas fa-child"></i>Familial</p>
-					<p class="filter_2"><i class="fas fa-heart"></i>Romantique</p>
-					<p class="filter_2"><i class="fas fa-dog"></i>Animaux autorisés</p>
+					<p><i class="fas fa-money-bill-wave filter_1_image"></i>Économique</p>
+					<p><i class="fas fa-child filter_2_image"></i>Familial</p>
+					<p><i class="fas fa-heart"></i>Romantique</p>
+					<p><i class="fas fa-dog"></i>Animaux autorisés</p>
 				
 				</section>
 			
