optimisation des codes pour un rendu meilleur et eviter le max de bug pour l'avenir

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		
 	</header>
 
-<!-- Sections -->
+<!-- 1st Sections -->
 
 	<section class="first_section">
 	
 		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
-		<p class="p-under-title">En plein centre ville ou en plein nature</p>
+		<p class="p_under_title">En plein centre ville ou en plein nature</p>
 		
 		<form method="post">
 		
@@ -41,6 +41,8 @@
 			</p>
 			
 		</form>
+		
+<!-- 2nd section -->
 		
 		<section class="second_section">
 		
@@ -251,14 +253,28 @@
 			</figure>
 				
 		</div>
-			
+		
 	</section>
 	
-	<footer>
+<!-- 3rd section -->
 
+	<section class="third_section">
+
+		<h1>Activités à Marseille</h1>
 		
+		<figure class="activities_figure">
+		
+			<img class="activities_img1" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+			
+			<figcaption class="activities_figcaption">
+			
+				<p class="bold">Vieux Port</p>
+				
+			</figcaption>
+			
+		</figure>
 
-	</footer>
+	</section>
 	
 </body>
 </html>
