save pour faire des tests par la suite

--- a/index.html
+++ b/index.html
@@ -286,6 +286,17 @@
 			
 		</figure>
 
+		<figure class="activities_figure3">
+		
+			<img class="activities_img3" src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+			
+			<figcaption class="activities_figcaption3">
+			
+				<p class="bold">Îles du Frioul</p>
+				
+			</figcaption>
+			
+		</figure>
 
 	</section>
 	
