--- a/index.html
+++ b/index.html
@@ -319,6 +319,8 @@
 			
 		</div>
 
+		<div class="activities_div3">
+
 			<figure class="activities_figure5">
 			
 				<img class="activities_img5" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg">
