correction de faute d'orthogrpahe + test pour la petite resolution

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 	</section>
 	
 <!-- Container 1 -->
+
+	<div class="container_1-2">
 	
 	<section class="marseille_accommodation">
 		
@@ -257,6 +259,8 @@
 				
 		</div>
 		
+	</div>
+	
 	</section>
 	
 <!-- 3rd section -->
