modification du nom du css et quelques corrections des codes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml">
     <title>Reservia</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-	<link rel="stylesheet" media="screen and (max-width: 425px)" href="mobile_resolution.css" />
+	<link rel="stylesheet" media="screen and (max-width: 600px)" href="others_resolution.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/6bfc1fd3f9.js" crossorigin="anonymous"></script>
 	<meta charset="UTF-8">
