amélioration de la partie visuel du site mobile et tablette

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 		
 	<img class="logo_reservia" src="images/logo/Reservia@3x.png" alt="Reservia"/>
 
-	<nav>
+	<nav class="header_nav">
 			
 		<ul class="menu_list">
 			
-			<li><a href="#accommodation" id="accommodation_menu_list"> Hébergements </a></li>
-			<li><a href="#activities" id="activities_menu_list"> Activités </a></li>
+			<li class="header_li"><a href="#accommodation" id="accommodation_menu_list"> Hébergements </a></li>
+			<li class="header_li"><a href="#activities" id="activities_menu_list"> Activités </a></li>
 			<li><a class="link_login"> S'inscire </a></li>
 			
 		</ul>
