--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 
 	<section class="first_section">
 	
-		<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
-		<p class="p_under_title">En plein centre ville ou en plein nature</p>
+		<div class="title_div">
+		
+			<h1 class="title">Trouvez votre hébergement pour des vacances de rêve</h1>
+			<p class="p_under_title">En plein centre ville ou en plein nature</p>
+			
+		</div>
 		
 		<form method="post">
 		
@@ -381,7 +385,7 @@
 	
 	<footer>
 	
-		<nav class="about_div">
+		<div class="about_div">
 			
 			<ul class="about_ul1-2 about_ul">
 				
@@ -408,7 +412,7 @@
 					
 			</ul>
 			
-		</nav>
+		</div>
 	
 	</footer>
 	
