--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="others_resolution.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/6bfc1fd3f9.js" crossorigin="anonymous"></script>
+	<link href="{{ 'assets/css/style.css' | relative_url }}" rel="stylesheet">
 	<meta charset="UTF-8">
 </head>
 <body>
